[package]
name = "pillreserves"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.11" }
chrono = { version = "0.4" }
derive-new = { version = "0.5" }
form_urlencoded = { version = "1.0" }
http = { version = "0.2" }
hyper = { version = "0.14", features = ["http1", "http2", "server", "tcp"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = { version = "0.2" }
once_cell = { version = "1.13" }
regex = { version = "1.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.5" }
url = { version = "2.2" }
